--- a/siic_weekly_report_20250929.html
+++ b/siic_weekly_report_20250929.html
@@ -383,7 +383,7 @@
                     <li style="margin-bottom: 12px; display: flex; align-items: flex-start;">
                         <div style="width: 6px; height: 6px; background: #DA1E28; border-radius: 50%; margin-right: 12px; margin-top: 8px;"></div>
                         <div>
-                            <span style="font-weight: 700; color: #DA1E28;">해지(2)</span>: 
+                            <span style="font-weight: 700; color: #DA1E28;">해지(2)</span>: 하바나선데이 (09/30), 원로그 (11/30)
                         </div>
                     </li>
                 </ul>
@@ -1234,4 +1234,5 @@
 </body>
 
 </html>
+
 
